@@ -36,6 +36,6 @@ Martina Morris, University of Washington
 
 The 'statnet' development team
 
-Copyright 2008-2013
+Copyright 2008-2016
 
 
