@@ -1,3 +1,21 @@
+/*  File src/wtMHproposals.h in package ergm.count, part of the Statnet suite
+ *  of packages for network analysis, http://statnet.org .
+ *
+ *  This software is distributed under the GPL-3 license.  It is free,
+ *  open source, and has the attribution requirements (GPL Section 7) at
+ *  http://statnet.org/attribution
+ *
+ *  Copyright 2008-2016 Statnet Commons
+ */
+/*  File src/wtMHproposals.h in package ergm.count, part of the Statnet suite
+ *  of packages for network analysis, http://statnet.org .
+ *
+ *  This software is distributed under the GPL-3 license.  It is free,
+ *  open source, and has the attribution requirements (GPL Section 7) at
+ *  http://statnet.org/attribution
+ *
+ *  Copyright 2008-2016 Statnet Commons
+ */
 #ifndef WTMHPROPOSALS_H
 #define WTMHPROPOSALS_H
 
